adding workflow_dispatch

--- a/.github/workflows/fetch-books.yml
+++ b/.github/workflows/fetch-books.yml
@@ -3,6 +3,7 @@ name: Fetch Books from Trello
 on:
   schedule:
     - cron: '0 0 * * *'  # Run everyday at midnight UTC
+  workflow_dispatch:     # Run by hand
 
 jobs:
   fetch-books:
