--- a/.github/workflows/fetch-books.yml
+++ b/.github/workflows/fetch-books.yml
@@ -22,6 +22,7 @@ jobs:
 
     - name: Fetch books from Trello
       env:
+        ACTION: "GITHUB_ACTION"
         TRELLO_API_KEY: ${{ secrets.TRELLO_API_KEY }}
         TRELLO_OAUTH_SECRET: ${{ secrets.TRELLO_OAUTH_SECRET }}
         TRELLO_TOKEN: ${{ secrets.TRELLO_TOKEN }}
