--- a/.github/workflows/fetch-books.yml
+++ b/.github/workflows/fetch-books.yml
@@ -34,11 +34,10 @@ jobs:
         git config --global user.name "GitHub Actions"
         git add books.json
         # Check for modified files
-        git diff --staged --exit-code --quiet
-        if [ $? -eq 1 ]; then
+        if git diff --staged --quiet; then
+          echo "No changes to books.json, skipping commit"
+        else
           echo "Changes detected, creating a commit"
           git commit -m "Update books list"
           git push
-        else
-          echo "No changes to books.json, skipping commit"
         fi
