--- a/.github/workflows/fetch-books.yml
+++ b/.github/workflows/fetch-books.yml
@@ -35,7 +35,7 @@ jobs:
       run: |
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git config --global user.name "GitHub Actions"
-        git add completed_books.json reading_books
+        git add completed_books.json reading_books.json shelved_books.json
         # Check for modified files
         if git diff --staged --quiet; then
           echo "No changes to books lists, skipping commit"
